; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_hardcopy.c_prt_header_height.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_hardcopy.c_prt_header_height.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64 }

@printer_opts = common dso_local global %struct.TYPE_2__* null, align 8
@OPT_PRINT_HEADERHEIGHT = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @prt_header_height() #0 {
  %1 = alloca i32, align 4
  %2 = load %struct.TYPE_2__*, %struct.TYPE_2__** @printer_opts, align 8
  %3 = load i64, i64* @OPT_PRINT_HEADERHEIGHT, align 8
  %4 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %2, i64 %3
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 1
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %14

8:                                                ; preds = %0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @printer_opts, align 8
  %10 = load i64, i64* @OPT_PRINT_HEADERHEIGHT, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i64 %10
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  store i32 %13, i32* %1, align 4
  br label %15

14:                                               ; preds = %0
  store i32 2, i32* %1, align 4
  br label %15

15:                                               ; preds = %14, %8
  %16 = load i32, i32* %1, align 4
  ret i32 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
